fix texts not showing on ios

--- a/src/main/resources/static/css/Dashboard.css
+++ b/src/main/resources/static/css/Dashboard.css
@@ -237,6 +237,7 @@
     background-color: var(--bg-white);
     transition: 0.2s;
     font-size:1rem;
+    color:black;
 }
 
 .quick-add-btn:hover {
